added redirect HTML to index.html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-test
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1;url=https://homes.cs.washington.edu/~rahuln">
+        <script type="text/javascript">
+            window.location.href = "http://example.com"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, click <a href='https://homes.cs.washington.edu/~rahuln'>here</a>
+    </body>
+</html>
 
