--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://homes.cs.washington.edu/~rahuln">
+        <meta http-equiv="refresh" content="1; url=https://homes.cs.washington.edu/~rahuln/">
+        <script type="text/javascript">
+            window.location.href = "https://homes.cs.washington.edu/~rahuln/"
+        </script>
         <title>Page Redirection</title>
     </head>
     <body>
-        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, click <a href='https://homes.cs.washington.edu/~rahuln'>here</a>
+        If you are not redirected automatically, follow this <a href='https://homes.cs.washington.edu/~rahuln/'>link</a>.
     </body>
 </html>
-
